# api/src/routes/data/cashflow/index.js
@@ -5,6 +5,75 @@
 const overview = require('./overview');
 const updateBalance = require('./updateBalance');
 
+/**
+ * @swagger
+ * /data/overview:
+ *     get:
+ *         summary: Get overview budget data
+ *         tags:
+ *             - Overview
+ *         operationId: getDataOverview
+ *         description: |
+ *             Get monthly cash flow data, broken down into categories
+ *         produces:
+ *         - application/json
+ *         responses:
+ *             200:
+ *                 description: successful operation
+ *                 schema:
+ *                     type: object
+ *                     properties:
+ *                         data:
+ *                             type: object
+ *                             properties:
+ *                                 endYearMonth:
+ *                                     type: array
+ *                                     example: [2018,9]
+ *                                 currentYear:
+ *                                     type: integer
+ *                                     example: 2017,
+ *                                 startYearMonth:
+ *                                     type: array
+ *                                     example: [2015,8]
+ *                                 cost:
+ *                                     type: object
+ *                                     properties:
+ *                                         balance:
+ *                                             type: array
+ *                                             description: Balance for the displayed months
+ *                                             example: [488932, 916589, 1055601]
+ *                                         old:
+ *                                             type: array
+ *                                             description: Balance for the months preceding the displayed data
+ *                                             example: [140000, 235686]
+ *                                         income:
+ *                                             type: array
+ *                                             example: [180000, 200000]
+ *                                         funds:
+ *                                             type: array
+ *                                             example: [180000, 200000]
+ *                                         bills:
+ *                                             type: array
+ *                                             example: [72500, 5800]
+ *                                         food:
+ *                                             type: array
+ *                                             example: [154, 506, 366, 472]
+ *                                         general:
+ *                                             type: array
+ *                                             example: [15000, 110, 9086]
+ *                                         social:
+ *                                             type: array
+ *                                             example: [2300]
+ *                                         holiday:
+ *                                             type: array
+ *                                             example: [70000, 16000]
+ *                                 futureMonths:
+ *                                     type: integer
+ *                                     example: 12
+ *                                 currentMonth:
+ *                                     type: integer
+ *                                     example: 9
+ */
 async function routeGet(req, res) {
     const data = await overview.getData(req.db, req.user);
 
