# docs/api/api.yml
@@ -66,117 +66,6 @@
     
     paths:
         /user/login:
-            post:
-                summary: Get an API key for logging in
-                tags:
-                    - authentication
-                operationId: login
-                description: |
-                    Log in to the app
-                produces:
-                - application/json
-                parameters:
-                - in: body
-                  name: pin
-                  description: The PIN of the user to retrieve an API key for
-                  required: true
-                  type: string
-                responses:
-                    201:
-                        description: successful login
-                        schema:
-                            type: object
-                            properties:
-                                error:
-                                    type: boolean
-                                    example: false
-                                api_key:
-                                    type: string
-                                    example: f1d2d2f924e986ac86fdf7b36c94bcdf32beec15
-                                uid:
-                                    type: number
-                                    example: 1
-                                name:
-                                    type: string
-                                    example: user1
-                    401:
-                        description: unsuccessful login
-                        schema:
-                            type: object
-                            properties:
-                                error:
-                                    type: boolean
-                                    example: true
-                                errorText:
-                                    type: string
-                                    example: Bad PIN
-        
-        /data/overview:
-            get:
-                summary: Get overview budget data
-                tags:
-                    - overview
-                operationId: getDataOverview
-                description: |
-                    Get monthly cash flow data, broken down into categories
-                produces:
-                - application/json
-                responses:
-                    200:
-                        description: successful operation
-                        schema:
-                            type: object
-                            properties:
-                                data:
-                                    type: object
-                                    properties:
-                                        endYearMonth:
-                                            type: array
-                                            example: [2018,9]
-                                        currentYear:
-                                            type: integer
-                                            example: 2017,
-                                        startYearMonth:
-                                            type: array
-                                            example: [2015,8]
-                                        cost:
-                                            type: object
-                                            properties:
-                                                balance:
-                                                    type: array
-                                                    description: Balance for the displayed months
-                                                    example: [488932, 916589, 1055601]
-                                                old:
-                                                    type: array
-                                                    description: Balance for the months preceding the displayed data
-                                                    example: [140000, 235686]
-                                                income:
-                                                    type: array
-                                                    example: [180000, 200000]
-                                                funds:
-                                                    type: array
-                                                    example: [180000, 200000]
-                                                bills:
-                                                    type: array
-                                                    example: [72500, 5800]
-                                                food:
-                                                    type: array
-                                                    example: [154, 506, 366, 472]
-                                                general:
-                                                    type: array
-                                                    example: [15000, 110, 9086]
-                                                social:
-                                                    type: array
-                                                    example: [2300]
-                                                holiday:
-                                                    type: array
-                                                    example: [70000, 16000]
-                                        futureMonths:
-                                            type: integer
-                                            example: 12
-                                        currentMonth:
-                                            type: integer
-                                            example: 9
         /data/balance:
             post:
                 summary: Insert balance data
